[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "velesquant"
version = "0.1.0"
description = "A high-performance financial valuation library"
readme = "README.md"
authors = [
  { name = "Valuation Lib Team", email = "info@valuationlib.com" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Repository = "https://github.com/valuationlib/velesquant"
Issues = "https://github.com/valuationlib/velesquant/issues"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest"]

[tool.poetry]
name = "velesquant"
version = "0.1.0"
description = "A high-performance financial valuation library"
authors = ["Valuation Lib Team <info@valuationlib.com>"]
readme = "README.md"
packages = [{include = "velesquant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.14.11"
black = "^25.12.0"
isort = "^7.0.0"
pybind11 = "^3.0.1"
pybind11-stubgen = "^2.5.5"

[tool.isort]
profile = "black"

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
# Set the wheel install directory to match src-layout
wheel.packages = ["src/velesquant"]

[tool.setuptools.package-data]
velesquant = ["py.typed", "*.pyi"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "velesquant.native"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["build", "build_*", "_deps", ".venv", "dist"]

[tool.pylint.main]
extension-pkg-allow-list = ["velesquant.native"]
