[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "velesquant"
version = "0.1.0"
description = "A high-performance financial valuation library"
readme = "README.md"
authors = [
  { name = "Suren Islyaev", email = "suren.islyaev@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Repository = "https://github.com/suren777/VelesQuant"
Issues = "https://github.com/suren777/VelesQuant/issues"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest"]

[tool.poetry]
name = "velesquant"
version = "0.1.0"
description = "A high-performance financial valuation library"
authors = ["Suren Islyaev <suren.islyaev@gmail.com>"]
readme = "README.md"
packages = [{include = "velesquant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.14.11"
black = "^25.12.0"
isort = "^7.0.0"
pybind11 = "^3.0.1"
pybind11-stubgen = "^2.5.5"
pytest-cov = "^7.0.0"

[tool.isort]
profile = "black"

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
# Set the wheel install directory to match src-layout
wheel.packages = ["src/velesquant"]

[tool.setuptools.package-data]
velesquant = ["py.typed", "*.pyi"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "velesquant.native"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["build", "build_*", "_deps", ".venv", "dist"]

[tool.pylint.main]
extension-pkg-allow-list = ["velesquant.native"]
