[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "VelesQuant"
dynamic = ["version"]
description = "A high-performance financial valuation library"
readme = "README.md"
authors = [
  { name = "Suren Islyaev", email = "suren.islyaev@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["finance", "valuation", "quantitative", "pde", "volatility", "options", "quantlib", "pybind11"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/suren777/VelesQuant"
Repository = "https://github.com/suren777/VelesQuant"
Issues = "https://github.com/suren777/VelesQuant/issues"
"Code of Conduct" = "https://github.com/suren777/VelesQuant/blob/main/CODE_OF_CONDUCT.md"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pylint",
    "pybind11-stubgen",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
# Set the wheel install directory to match src-layout
wheel.packages = ["src/velesquant"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/velesquant/native.pyi", "src/velesquant/py.typed"]

[tool.setuptools_scm]
write_to = "src/velesquant/_version.py"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "velesquant.native"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["build", "build_*", "_deps", ".venv", "dist"]

[tool.pylint.main]
extension-pkg-allow-list = ["velesquant.native"]
